--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,6 +1,15 @@
-body {
-  background: grey;
+* {
+  margin: 0; 
+  padding: 0;
+  box-sizing: border-box;
+}
 
+body {
+  margin: 0;
+  background: grey;
+  font-family: Roboto, sans-serif;
+  font-weight: 400;
+  font-size: 18px;
   @media (min-width: 768px) {
     color: red;
   }
