--- a/src/css/components/hero.css
+++ b/src/css/components/hero.css
@@ -1,17 +1,64 @@
 .hero {
-  color: red;
   position: relative;
+  width: 100%;
+  height: 75vh;
+  background-image: url("../../images/FEND-Coffee-latte-art-3.png");
+  background-size: cover;
+  background-position: center; 
+  z-index: 5; 
+  filter: grayscale(30%);
 }
 
-.hero-title {
+.hero-content {
   position: absolute;
-  top: 50%;
-  right: 50%;
-  transform: translate(50%,-50%);
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  color: #FFFFFF;
+  display: flex; 
+  align-items:center;
+  justify-content: space-between;
+  flex-direction: column;
   z-index: 10;
 }
 
-.hero-img {
-  filter: grayscale(50%);
-  z-index: 5;
+.hero-nav {
+  width: 98%;
+  height: 55px;
+  display: flex; 
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.hero-nav svg {
+  width: 35px;
+  height: 35px;
+}
+
+.hero-text {
+  text-align: center;
+}
+
+h1 {
+  font-size: 64px;
+  font-weight: 900;
+  margin: 0;
+}
+
+.hero-content button {
+ margin-bottom: 15%;
+}
+
+.button-dark {
+  background-color: #1A1A1A;
+  padding: 15px 50px;
+  border: 2px; 
+  border-radius: 5px;
+}
+
+.button-dark a {
+  color: #FFFFFF;
+  text-decoration: none;
 }
