--- a/src/css/components/section1.css
+++ b/src/css/components/section1.css
@@ -145,13 +145,204 @@
     }
 }
 
+/*-----*/
+
 .section2 {
-    height: 910px;
+    height: auto;
     width: 100%;
-    background-color: #3A3734;
+    background-color: #1a1a1a;
+    color: #FFF; 
+    padding: 40px;
+}
+
+.section2 h2 {
+    font-size: 36px;
+    font-weight: 900;
+    line-height: 34px;
+    color: #FFF;
+    margin-top: 20px;
+}
+
+.section2_title {
+    width: 350px; 
+    
+}
+
+.section2_flex_container {
+    display: flex; 
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 40px 0 40px 0; 
 }
 
 
+.coffee {
+    color: #FFF;
+    width: 40%;
+    height: auto;
+    margin: 5px;
+    padding-bottom: 20px; 
+}
+
+.product {
+    background-color: #e9e9e9;
+    width: 100%; 
+    height: auto; 
+}
+
+.price {
+    color: #737373;
+    font-size: 14px;
+    line-height: 18px;
+}
+
+.button-hell {
+    width: 182px; 
+    height: 48px;
+    border: 3px solid #FFF; 
+    border-radius: 5px;
+    padding: 15px 50px; 
+    gap: 15px; 
+    margin-bottom: 40px;
+    margin-left: auto;
+    margin-right: auto; 
+}
+
+.button-hell a {
+    color: #FFF; 
+    text-decoration: none;
+    font-size: 14px;
+    display: block;
+    width: 82px;
+}
+
+@media(min-width: 767px) {
+    .section2_flex_container {
+        flex-wrap: nowrap;
+    }
+}
+
+/*----*/
+
+.section3 {
+    background-image: url("../../images/FEND-Coffee-bags-2.png");
+    width: 100%;
+    height: 50vh; 
+    background-size: cover;
+    filter: grayscale(30%);
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+}
+
+.section3 div {
+    font-size: 14px;
+    color: #FFF;
+    text-align: center;
+    width: 67%;
+    padding: 5px; 
+}
+
+.section3 h3 {
+    font-size: 37px;
+    line-height: 32px;
+}
+
+.section3 p {
+    margin-top: 20px; 
+}
+
+
+.section3 a {
+    text-decoration: none;
+    color: #FFF; 
+    display: block; 
+    margin-top: 20px; 
+}
+
+@media(min-width: 767px) {
+        .section3 div {
+            width: 40%;
+        }
+        .section3 h3 {
+            font-size: 42px;
+            line-height: 49px;
+        }
+
+        .section3 p {
+            font-size: 18px;
+            line-height: 24px; 
+        }
+    }
+
+    /*-----*/
+
+.section4 {
+    display: flex; 
+    flex-direction: column;
+    width: 100%;
+}
+
+.section4_flex_container {
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.section4 h2 {
+    text-align: center;
+    margin: 40px;
+    font-size: 36px;
+}
+
+.section4 p {
+    margin-top: 20px; 
+}
+
+.section4 img {
+    width: 50%;
+    margin: 0 auto;
+}
+
+.section4_flex_item2 {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+   /* justify-content: space-between;*/
+}
+
+.icon_section4 {
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    font-size: 14px;
+    text-align: center;
+    padding: 5%;
+}
+
+
+
+.button-dark {
+    margin: 20px auto; 
+}
+
+@media(min-width: 767px) {
+
+    .section4_flex_item2 {
+        flex-direction: column;
+        width: 50%;
+    }
+
+    .section4_flex_container {
+        flex-direction: row;
+    }    
+
+    .section4 h2 {
+        font-size: 48px;
+    }
+}
 
 
 
