add a-tag to footer

--- a/src/css/components/footer.css
+++ b/src/css/components/footer.css
@@ -33,7 +33,11 @@
 .flex-item {
     width: 185px;
     padding: 20px;  
+}
 
+.flex-item a {
+    color: #fff; 
+    text-decoration: none;
 }
 
 .h3-top {
