--- a/src/components/footer.hbs
+++ b/src/components/footer.hbs
@@ -26,14 +26,14 @@
             </div>
         
             <div class="flex-item">
-              <p>Impressum</p>
-              <p>Datenschutz</p>
+              <p><a href="/sub-page/">Impressum</a></p>
+              <p><a href="/sub-page/">Datenschutz</a></p>
             </div>
 
             <div class="flex-item">
-              <p>Café</p>
-              <p>Shop</p>
-              <p>Herkunft</p>
+              <p><a href="/sub-page/">Café</a></p>
+              <p><a href="/sub-page/">Shop</a></p>
+              <p><a href="/sub-page/">Herkunft</a></p>
             </div>
 
         </div>
