--- a/src/css/components/section1.css
+++ b/src/css/components/section1.css
@@ -247,6 +247,7 @@
     display: flex; 
     align-items: center;
     justify-content: center;
+    background-position: top;
 }
 
 .section3 div {
@@ -359,7 +360,7 @@
 
 .section5 {
     width: 100%; 
-    height: 33vh;
+    height: 50vh;
 }
 
 .section5 h2 {
@@ -368,8 +369,7 @@
 
 .section5 iframe {
     width: 100%; 
-    height: auto; 
-    background-size: contain;
+    height: 42vh; 
 } 
 
 
