--- a/src/css/components/hero.css
+++ b/src/css/components/hero.css
@@ -2,11 +2,17 @@
   position: relative;
   width: 100%;
   height: 75vh;
-  background-image: url("../../images/FEND-Coffee-latte-art-3.png");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3)), url("../../images/FEND-Coffee-latte-art-3.jpg");
   background-size: cover;
   background-position: top; 
   z-index: 5; 
-  filter: grayscale(30%);
+}
+
+/*linear-gradient(rgba (0, 0, 0, 0.3)), - vor die url, bild als jpg probieren*/
+
+.hero {
+  height: 75vh; 
+
 }
 
 .hero-content {
