add subpages origin and cafe

--- a/src/components/footer.hbs
+++ b/src/components/footer.hbs
@@ -31,9 +31,9 @@
             </div>
 
             <div class="flex-item">
-              <p><a href="/sub-page/">Café</a></p>
+              <p><a href="../subpage/cafe.html">Café</a></p>
               <p><a href="/sub-page/">Shop</a></p>
-              <p><a href="/sub-page/">Herkunft</a></p>
+              <p><a href="../subpage/origin.html">Herkunft</a></p>
             </div>
 
         </div>
