--- a/src/components/header_home.hbs
+++ b/src/components/header_home.hbs
@@ -13,7 +13,7 @@
                 <path d="M0 2H23.5M0 8H23.5M0 14.5H16.5" stroke="white" stroke-width="3"/>
             </svg>
             <ul>
-              <li><a href="/sub-page/">das Café</a></li>
+              <li><a href="../subpage/cafe.html">das Café</a></li>
               <li><a href="/sub-page/">Über Uns</a></li>
               <li><a href="/sub-page/">Shop</a></li>
             </ul>
