--- a/src/css/components/navigation.css
+++ b/src/css/components/navigation.css
@@ -42,3 +42,19 @@
     text-decoration: underline;
   }
   
+  [popover]:popover-open {
+    opacity: 1;
+    transform: scaleX(1);
+  }
+  [popover] {
+    padding: 10px;
+    width: 100%;
+    opacity: 0;
+    transform: scaleX(0);
+  }
+ 
+  #mypopover {
+    width: 100%; 
+    height: 300px; 
+    background-color: aqua;
+  }
