--- a/src/css/components/origin.css
+++ b/src/css/components/origin.css
@@ -75,7 +75,7 @@
 }
 
 video::-webkit-media-controls-panel{
-    /*display: none;*/
+    display: none;
     width: 100%;
     height: 3000px;
 }
@@ -87,7 +87,6 @@ video::-webkit-media-controls-panel{
 video::-webkit-media-controls-play-button {
     width: 100%;
     height: 500%;
-    background-color: brown;
 }
 
 
