--- a/src/css/components/hero.css
+++ b/src/css/components/hero.css
@@ -18,7 +18,7 @@
   color: #FFFFFF;
   display: flex; 
   align-items:center;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-direction: column;
   z-index: 10;
 }
@@ -34,11 +34,11 @@
 .hero-nav svg {
   width: 35px;
   height: 35px;
-  margin: 10px; 
+  margin: 15px; 
 }
 
 .menu ul {
-  margin: 20px; 
+  margin: 20px 0; 
 }
 
 .menu li {
@@ -67,24 +67,8 @@
   text-decoration: underline;
 }
 
-.hero-text {
+.hero-text { 
   text-align: center;
-}
-
-.h1-top {
-  display: block;
-  font-size: 64px;
-  font-weight: 900;
-}
-
-.h1-bottom {
-  display: block; 
-  font-size: 18px;
-  font-weight: 400;
-}
-
-.hero-content button {
- margin-bottom: 15%;
 }
 
 .button-dark {
@@ -109,7 +93,7 @@
   border: #737373;
 }
 
-@media(min-width: 767px) {
+@media(min-width: 768px) {
   .hero{
     height: 65vh;
     background-position: center;
@@ -118,9 +102,14 @@
   .menu svg {
     display: none; 
   }
+
+  .hero-text {
+    
+  }
+  
 }
 
-@media(max-width: 766px) {
+@media(max-width: 767px) {
   .menu ul {
     display: none; 
   }
