--- a/src/css/base.css
+++ b/src/css/base.css
@@ -8,8 +8,7 @@ body {
   margin: 0;
   background: #FFFFFF;
   font-family: Roboto, sans-serif;
-  font-weight: 400;
-  font-size: 18px;
+
   @media (min-width: 768px) {
     color: #000;
   }
@@ -19,7 +18,7 @@ main {
   margin: 0 auto;
   max-width: 1440px;
 
-  & div {
+  div {
     color: #000000;
 
     @media (min-width: 768px) {
@@ -33,6 +32,46 @@ img {
   height: auto;
 }
 
+h1 {
+  font-size: var(--h1-size);
+  font-weight: var(--h1-weight);
+  line-height: var(--h1-line-height);
+
+  @media (min-width: 768px) {
+    font-size: var(--h1-d-size);
+    line-height: var(--h1-line-height);
+  }
+}
+
 h2 {
-  font-size: var(--h2-font-size);
+  font-size: var(--h2-size);
+  font-weight: var(--h2-weight);
+  line-height: var(--h2-line-height);
+
+  @media (min-width: 768px) {
+    font-size: var(--h2-d-size);
+    line-height: var(--h2-line-height);
+  }
+}
+
+h3 {
+  font-size: var(--h3-size);
+  font-weight: var(--h3-weight);
+  line-height: var(--h3-line-height);
+
+  @media (min-width: 768px) {
+    font-size: var(--h3-d-size);
+    line-height: var(--h3-line-height);
+  }
+}
+
+p {
+  font-weight: var(--p-weight);
+  font-size: var(--p-size);
+  line-height: var(--p-line-height);
+
+  @media (min-width: 768px) {
+    font-size: var(--p-d-size);
+    line-height: var(--p-line-height);
+  }
 }
