--- a/src/css/components/index.css
+++ b/src/css/components/index.css
@@ -7,8 +7,7 @@
     display: flex; 
     justify-content: space-between;
     margin: 40px;
-    /*font-size: 14px;
-    color: #1f1f1f;*/
+    /*color: #1f1f1f;*/
 }
 
 .container_b_section1 {
