--- a/src/css/components/navigation.css
+++ b/src/css/components/navigation.css
@@ -42,19 +42,47 @@
     text-decoration: underline;
   }
   
-  [popover]:popover-open {
-    opacity: 1;
-    transform: scaleX(1);
-  }
-  [popover] {
-    padding: 10px;
-    width: 100%;
-    opacity: 0;
-    transform: scaleX(0);
-  }
- 
-  #mypopover {
-    width: 100%; 
-    height: 300px; 
-    background-color: aqua;
-  }
+ /* Mobile Navigation */
+
+  #overlay {
+  width: 100%;
+  height: 100vh; 
+  z-index: 5;
+  background-color: black;
+  position: fixed; 
+  top: 0; 
+  left: 0;
+  display: none;
+ }
+
+ #overlay-box {
+  height: 100vh;
+  margin-left: 50px;
+  flex-wrap: wrap;
+  align-content: center;
+  position: relative;
+ }
+
+ #overlay ul {
+  position: absolute;
+  top: 33%; 
+  left: 10px; 
+ }
+
+ #overlay a {
+  text-decoration: none;
+  color: #fff; 
+  line-height: 75px;
+ }
+
+ #close-button {
+  position: absolute;
+  position: absolute; 
+  right:25px; 
+  top: 10px; 
+ }
+
+ #close-button img{
+  padding: 10px; 
+  
+ }
