add javascript to burger-menu and close-button

--- a/src/components/navigation.hbs
+++ b/src/components/navigation.hbs
@@ -31,7 +31,7 @@
   <div id="overlay-box">
     <ul>
       <li><h3><a href="../subpage/cafe.html">das Café</a></h3></li>
-      <li><h3><a href="/sub-page/">Herkunft</a></h3></li>
+      <li><h3><a href="../subpage/origin.html">Herkunft</a></h3></li>
       <li><h3><a href="/sub-page/">Shop</a></h3></li>
     </ul>
   </div>
