--- a/src/components/navigation.hbs
+++ b/src/components/navigation.hbs
@@ -15,7 +15,7 @@
       </svg>
       <ul>
         <li><a href="../subpage/cafe.html">das Café</a></li>
-        <li><a href="/sub-page/">Über Uns</a></li>
+        <li><a href="../subpage/origin.html">Herkunft</a></li>
         <li><a href="/sub-page/">Shop</a></li>
       </ul>
     </div>   
