--- a/src/css/components/origin.css
+++ b/src/css/components/origin.css
@@ -32,17 +32,6 @@
     }
 }
 
-.o3_container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: 15% 5%; 
-}
-
-.o3_item {
-    width: 100%;
-}
-
 .section_o2 {
     display: flex;
     justify-content: center;
@@ -89,4 +78,72 @@ video::-webkit-media-controls-play-button {
     height: 500%;
 }
 
+.section_o3 {
+    display: flex; 
+    flex-direction: column;
+}
+
+.o3_container1 {
+    display: flex; 
+    justify-content: space-between;
+    margin: 5%;
+    /*color: #1f1f1f;*/
+}
+
+.o3_container2 {
+    display: flex; 
+    justify-content: space-between;
+    margin: 5%;
+    flex-direction: row-reverse;
+    /*color: #1f1f1f;*/
+}
+
+.o3_container1 p, .o3_container2 p {
+    margin: 40px 0 20px 0; 
+}
+
+.o3_item {
+    width: 40%;
+}
+
+#image3 {
+    width: 50%;
+}
+
+#image4 {
+    width: 45%; 
+}
+
+
+@media(max-width: 767px) {
+    #image3 {
+        width: 75%;
+        position: relative; 
+        left: 25%;
+        margin: 40px 0;
+    }
+    
+    #image4 {
+        width: 75%;
+        margin: 40px 0; 
+    }
+
+    .o3_container1 {
+        flex-direction: column;
+        margin: 5%; 
+    }
+
+    .o3_container2 {
+        flex-direction: column;
+        margin: 5%; 
+    }
+
+    .o3_container1 p, .o3_container2 p {
+        margin: 20px 0 5px 0; 
+    }
+
+    .o3_item {
+        width: 100%;
+    }
+}
 
