--- a/src/css/components/navigation.css
+++ b/src/css/components/navigation.css
@@ -4,6 +4,9 @@
     display: flex; 
     flex-direction: row;
     justify-content: space-between;
+    position: fixed; 
+    top: 0; 
+    left: 2%;
   }
   
   .hero-nav svg {
