--- a/src/components/navigation.hbs
+++ b/src/components/navigation.hbs
@@ -14,9 +14,9 @@
           <path d="M0 2H23.5M0 8H23.5M0 14.5H16.5" stroke="white" stroke-width="3"/>
       </svg>
       <ul>
-        <li><a href="../subpage/cafe.html">das Café</a></li>
-        <li><a href="../subpage/origin.html">Herkunft</a></li>
-        <li><a href="/sub-page/">Shop</a></li>
+        <li><a class="cafe_page" href="../subpage/cafe.html">das Café</a></li>
+        <li><a class="origin_page" href="../subpage/origin.html">Herkunft</a></li>
+        <li><a class="shop_page" href="/sub-page/">Shop</a></li>
       </ul>
     </div>   
   </div>
