--- a/src/components/footer.hbs
+++ b/src/components/footer.hbs
@@ -34,7 +34,7 @@
               <div class="subs">
             
                 <div class="flex-item">
-                  <p><a href="/sub-page/">Impressum</a></p>
+                  <p><a href="../subpage/impressum.html">Impressum</a></p>
                   <p><a href="/sub-page/">Datenschutz</a></p>
                 </div>
 
