--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -33,10 +33,13 @@
   --p-weight: 400; 
   --p-line-height: 1.3;
 
+  --li-size: 14px; 
+
   --h1-d-size: 96px;
   --h2-d-size: 48px;
   --h3-d-size: 42px;
   --p-d-size: 18px;
+  --li-d-size: 18px;
   
 }
    
