add contact html

--- a/src/components/footer.hbs
+++ b/src/components/footer.hbs
@@ -36,6 +36,7 @@
                 <div class="flex-item">
                   <p><a href="../subpage/impressum.html">Impressum</a></p>
                   <p><a href="/sub-page/">Datenschutz</a></p>
+                  <p><a href="../subpage/contact.html">Kontakt</a></p>
                 </div>
 
                 <div class="flex-item">
