fix bugs dropdown-funcionality

--- a/src/css/components/contact.css
+++ b/src/css/components/contact.css
@@ -9,6 +9,7 @@
 }
 
 form {
+    
     margin: 40px 0 40px 0;
 
     @media (min-width: 768px) {
@@ -27,8 +28,18 @@ input {
     background-color: #E9E9E9; 
 }
 
+input:focus {
+    outline: none; 
+    background-color: #bab6b6;
+}
+
 #tel {
     background-color: rgba(255, 0, 0, 0.3);
+}
+
+#tel:focus {
+    outline: none; 
+    background-color: rgba(255, 0, 0, 0.45);
 }
 
 .select-container {
@@ -45,6 +56,7 @@ input {
     padding-left: 20px;
     background-color: black;
     color: #E9E9E9;
+    outline: none;
 }
 
 .custom-arrow {
@@ -58,6 +70,10 @@ input {
     pointer-events: none;
 }
 
+/*#custom-arrow-up {
+    display: none; 
+}*/
+
 .select-box option:first-child {
     display: none;
 }
@@ -65,11 +81,6 @@ input {
 .select-box option:nth-child(n) {
     background-color: #E9E9E9;
     color: black;
-    padding: 20px;
-}
-
-.select-box option:nth-child(n):hover {
-    background-color: gray;
 }
 
 #data {
@@ -109,13 +120,18 @@ textarea {
     border-top: none; 
     border-left: none; 
     border-right: none;
+    outline: none; 
 }
 
 textarea::placeholder {
     color: black;
     line-height: 180px;
     text-align: center;
+    font-family: Roboto;
+}
 
+textarea:focus {
+    background-color: #bab6b6;
 }
 
 .button-dark {
@@ -134,3 +150,4 @@ textarea::placeholder {
     border: #737373;
   }
 
+  
