--- a/src/components/navigation.hbs
+++ b/src/components/navigation.hbs
@@ -16,7 +16,7 @@
       <ul>
         <li><a class="cafe_page" href="../subpage/cafe.html">das Café</a></li>
         <li><a class="origin_page" href="../subpage/origin.html">Herkunft</a></li>
-        <li><a class="shop_page" href="/sub-page/">Shop</a></li>
+        <li><a class="shop_page" href="../subpage/shop.html">Shop</a></li>
       </ul>
     </div>   
   </div>
@@ -32,7 +32,7 @@
     <ul>
       <li><h3><a href="../subpage/cafe.html">das Café</a></h3></li>
       <li><h3><a href="../subpage/origin.html">Herkunft</a></h3></li>
-      <li><h3><a href="/sub-page/">Shop</a></h3></li>
+      <li><h3><a href="../subpage/shop.html">Shop</a></h3></li>
     </ul>
   </div>
 </div>
