import products from json

--- a/src/components/footer.hbs
+++ b/src/components/footer.hbs
@@ -41,7 +41,7 @@
 
                 <div class="flex-item">
                   <p><a href="../subpage/cafe.html">Café</a></p>
-                  <p><a href="/sub-page/">Shop</a></p>
+                  <p><a href="../subpage/shop.html">Shop</a></p>
                   <p><a href="../subpage/origin.html">Herkunft</a></p>
                 </div>
 
