--- a/src/components/map.hbs
+++ b/src/components/map.hbs
@@ -1,6 +1,6 @@
 <section class="section5">
     <h2>Komm vorbei</h2>
-    <iframe width="1200px" height="800px" src="https://www.openstreetmap.org/export/embed.html?bbox=10.11920750141144%2C54.34067282155345%2C10.12520492076874%2C54.34288061187882&amp;layer=hot&amp;marker=54.34177673153791%2C10.122206211090088" style="border: none">
+    <iframe width="1200px" height="auto" src="https://www.openstreetmap.org/export/embed.html?bbox=10.11920750141144%2C54.34067282155345%2C10.12520492076874%2C54.34288061187882&amp;layer=hot&amp;marker=54.34177673153791%2C10.122206211090088" style="border: none">
     </iframe>
 </section>
  
