--- a/src/css/components/map.css
+++ b/src/css/components/map.css
@@ -11,3 +11,11 @@
     width: 100%; 
     height: 42vh; 
 } 
+
+@media(min-width: 767px) {
+    #map {
+        margin-left: 40px;
+    }
+    
+}
+
