--- a/src/css/components/product.css
+++ b/src/css/components/product.css
@@ -3,7 +3,7 @@
     width: 100%;
     background-color: #1a1a1a;
     color: #FFF; 
-    padding: 40px;
+    padding: 20px;
 }
 
 .section2 h2 {
@@ -27,24 +27,91 @@
 }
 
 
-.coffee {
+.coffee-details {
     color: #FFF;
-    width: 40%;
+    width: 100%;
     height: auto;
-    margin: 5px;
-    padding-bottom: 20px; 
+    padding-bottom: 10px; 
 }
 
-.product {
-    background-color: #e9e9e9;
-    width: 100%; 
+.coffee-details p {
+    margin: 5px 5%;
+}
+
+.coffee-details svg {
+    margin-left: 5%;
+}
+
+.product-details {
+    background-color: #D7BE9D;
+    width: 90%; 
+    margin: 60px 5% 10px 5%;
     height: auto; 
+}
+
+.information {
+    width: 90%;
+}
+
+.information h3 {
+    margin: 5%;
 }
 
 .price {
     color: #737373;
     font-size: 14px;
     line-height: 18px;
+    margin: 10px 0 5px 0;
+}
+
+.product-features {
+    color: black;
+    margin: 10px 0 5px 0;
+}
+
+.select-container {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+select {
+    margin-bottom: 20px;
+}
+
+#icons {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+#icons > div {
+    width: 30%;
+    text-align: center;
+    padding: 20px;
+}
+
+.button-dark {
+    padding: 0;
+}
+
+.product-description {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 50px;
+}
+
+.product-description h3 {
+    margin: 100px 5% 20px 5%; 
+}
+
+.coffee {
+    width: 45%;
+    padding-bottom: 10%;
+}
+
+.product {
+    background-color: #FFF;
 }
 
 .button-hell {
