--- a/src/css/components/shop.css
+++ b/src/css/components/shop.css
@@ -29,14 +29,21 @@ a {
     display: grid; 
     column-gap: 4%;
     grid-template-columns: 1fr 1fr;
+    gap: 10px; 
 }
 
 .product-box {
     background-color: #e9e9e9;
     margin: 10px 0 10px 0; 
 }
-.price {
+
+.product-name {
+    margin-bottom: 10px;
+}
+
+.product-price {
     color: grey;
+    margin-bottom: 10px;
 }
 
 #beans {
@@ -49,10 +56,6 @@ a {
 
 #scoop {
     width: 20px; 
-}
-
-.infos {
-    margin-bottom: 15px;
 }
 
 @media(min-width: 767px) {
