--- a/src/components/navigation.hbs
+++ b/src/components/navigation.hbs
@@ -17,9 +17,7 @@
         <li><a class="cafe_page" href="../subpage/cafe.html">das Café</a></li>
         <li><a class="origin_page" href="../subpage/origin.html">Herkunft</a></li>
         <li><a class="shop_page" href="../subpage/shop.html">Shop</a></li>
-        <li><a href="../subpage/shoppingcart.html">
-        <img src="../images/shoppingcart-white.svg" alt="shopping-cart"></a>
-      </li>
+        <li><img class="open-cart-button" src="../images/shoppingcart-white.svg" alt="shopping-cart"></li>
       </ul>
     </div>   
   </div>
@@ -36,7 +34,7 @@
       <li><h3><a href="../subpage/cafe.html">das Café</a></h3></li>
       <li><h3><a href="../subpage/origin.html">Herkunft</a></h3></li>
       <li><h3><a href="../subpage/shop.html">Shop</a></h3></li>
-      <li><a href="../subpage/shoppingcart.html"><img src="../images/shoppingcart-white.svg" alt="shopping-cart"></a></li>
+      <li><img class="open-cart-button" src="../images/shoppingcart-white.svg" alt="shopping-cart"></li>
     </ul>
   </div>
 </div>
